Fixed events in mobile having extra padding

--- a/assets/less/hmcc.less
+++ b/assets/less/hmcc.less
@@ -37,6 +37,11 @@ label {
 	background-color: @light-gray;
 
 	@media only screen and (max-width: @screen-sm) {
+
+		& {
+			padding: 0;
+		}
+
 		.container {
 			padding: 0;
 		}
